--- a/src/theme.css
+++ b/src/theme.css
@@ -4,27 +4,30 @@
 
 body {
     margin: 0;
-    font-family: Inter, Roboto, Oxygen, Fira Sans, Helvetica Neue, sans-serif;
-    font-size: 16px;
-    color: rgb(43, 43, 43);
-    background: hsl(53, 67%, 76%);
+    font-family: 'Poiret One', serif, sans-serif;
+    font-size: 24px;
+    text-align: center;
+    font-style: normal;
+    font-weight: normal;
+    line-height: 28px;
+    color: #614021;
+    letter-spacing: 0.08em;
+    text-indent: 2px;
+    background: #FFECE1;
 }
 
 .btn {
     margin: 2rem;
+    font-family: 'Poiret One', serif, sans-serif;
     font-weight: normal;
-    color: rgb(0, 0, 0);
+    font-size: 20px;
     position: relative;
-    place-content: center;
-    place-items: center;
-    width: fit-content;
     border-radius: 99px;
-    letter-spacing: 0.05em;
+    letter-spacing: 0.08em;
     border: none;
-    padding: 1rem 2rem;
-    white-space: nowrap;
-    font-size: medium;
-    background: #b98942cb;
+    padding: 1.5rem 2rem;
+
+    background: rgba(233, 187, 145, 0.8);
     transition: all 0.22s;
 }
 
@@ -62,28 +65,34 @@ body {
     border-color: #c25205;
 }
 
-h1 {
-    font-weight: lighter;
-}
-
+/* h1 и h3 наследуются */
 h2 {
-    font-weight: lighter;
     margin-bottom: 4rem;
+    font-family: 'Poiret One', serif, sans-serif;
+    font-weight: bold;
+    font-size: 45px;
+    line-height: 50px;
+    text-align: center;
+    letter-spacing: 0.08em;
+    color: #70573B;
 }
 
-span {
+p {
     max-width: 50rem;
-    text-align: center;
     margin: 1rem 0;
-    font-size: medium;
+    font-family: 'Istok Web', cursive;
+    font-style: normal;
     font-weight: lighter;
+    font-size: 20px;
+    line-height: 24px;
+    text-align: center;
+    letter-spacing: 0.03em;
 }
 
 .flex-column {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    
     margin-bottom: 2rem;
 }
 
