--- a/src/theme.css
+++ b/src/theme.css
@@ -16,6 +16,24 @@ body {
     background: #FFECE1;
 }
 
+.input {
+    margin: 0.5rem;
+    font-family: 'Poiret One', serif, sans-serif;
+    font-weight: normal;
+    font-size: 20px;
+    position: relative;
+    border-radius: 99px;
+    letter-spacing: 0.08em;
+    border: none;
+    padding: 1.5rem 2rem;
+}
+
+.input:focus {
+    outline-width: 0.2rem;
+    outline-color: rgb(233, 187, 145);
+    outline-style: solid;
+}
+
 .btn {
     margin: 2rem;
     font-family: 'Poiret One', serif, sans-serif;
@@ -26,7 +44,6 @@ body {
     letter-spacing: 0.08em;
     border: none;
     padding: 1.5rem 2rem;
-
     background: rgba(233, 187, 145, 0.8);
     transition: all 0.22s;
 }
@@ -99,6 +116,7 @@ p {
 .flex-row {
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
     justify-content: space-around;
     flex-direction: row;
     margin-bottom: 2rem;
