--- a/src/theme.css
+++ b/src/theme.css
@@ -1,4 +1,5 @@
 body {
+    min-width: 350px;
     box-sizing: border-box;
     margin: 0;
     font-family: 'Poiret One', serif, sans-serif;
@@ -6,7 +7,7 @@ body {
     text-align: center;
     font-style: normal;
     font-weight: normal;
-    line-height: 28px;
+    line-height: 40px;
     color: #614021;
     letter-spacing: 0.08em;
     text-indent: 2px;
@@ -72,7 +73,6 @@ a {
     box-shadow: inset 1px 1px 1px rgba(0, 0, 0, 0.3);
 }
 
-/* h1 и h3 наследуются */
 h2 {
     margin-bottom: 4rem;
     font-family: 'Poiret One', serif, sans-serif;
