--- a/src/theme.css
+++ b/src/theme.css
@@ -74,8 +74,52 @@ a {
     box-shadow: inset 1px 1px 1px rgba(0, 0, 0, 0.3);
 }
 
+.table {
+    min-width: 15rem;
+    margin: 0 2rem;
+    width: 85%;
+    border-collapse: collapse;
+}
+    .table-title-item {
+        padding: 1rem;
+    }
+    .table-row-1 {
+        background-color: rgba(255,255,255,0.95);
+    }
+    .table-row-2 {
+        background-color: rgba(255,255,255,0.8);
+        border-bottom: 1px solid rgba(128, 128, 128, 0.4);
+        border-top: 1px solid rgba(128, 128, 128, 0.4);
+    }
+    .table-row-item {
+        margin-right: 0;
+        font-size: 20px;
+        padding: 1rem;
+    }
+
+.information-message {
+    margin: 0 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    font-size: 20px;
+    line-height: normal;
+    text-align: left;
+    border-radius: 15px;
+    padding: 1rem;
+    box-shadow: 1px 10px 20px 0 rgba(0,0,0,0.1);
+    background-color: rgba(255,255,255,0.85);
+}
+    .info-logo-img {
+        width: 2.5rem;
+        position: absolute;
+        align-self: flex-end;
+    }
+
 h2 {
     margin-bottom: 4rem;
+    max-width: 90%;
+    padding: 0 1rem;
     font-family: 'Poiret One', serif, sans-serif;
     font-weight: bold;
     font-size: 45px;
@@ -83,6 +127,11 @@ h2 {
     text-align: center;
     letter-spacing: 0.08em;
     color: #70573B;
+}
+
+h3 {
+    max-width: 90%;
+    padding: 0 1rem;
 }
 
 p {
@@ -110,4 +159,28 @@ p {
     align-items: center;
     justify-content: space-around;
     flex-direction: row;
+}
+
+@media (max-width: 950px) {
+    .table thead {
+        display: none;
+    }
+    .table-row-1, .table-row-2{
+        display: block;
+    }
+    .table-row-item {
+        display: block;
+        text-align: right;
+        border-bottom: 1px dotted #ccc;
+    }
+    .table-row-item:last-child {
+        border-bottom: 0;
+    }
+    .table-row-item:before {
+        content: attr(aria-label);
+        float: left;
+        font-size: 17px;
+        text-transform: uppercase;
+        font-weight: bold;
+    }
 }
