--- a/src/theme.css
+++ b/src/theme.css
@@ -38,6 +38,7 @@ a {
     border: none;
     padding: 1rem 1.5rem;
     transition: all 0.05s;
+    box-shadow: 1px 2px 10px 0 rgba(0, 0, 0, 0.2);
 }
 
 .input:focus {
@@ -56,6 +57,7 @@ a {
     border: none;
     padding: 1rem 1.5rem;
     transition: all 0.05s;
+    box-shadow: 1px 2px 10px 0 rgba(0, 0, 0, 0.2);
 }
 
 .textarea:focus {
@@ -71,9 +73,11 @@ a {
     border-radius: 99px;
     letter-spacing: 0.08em;
     border: none;
+    max-width: 50rem;
     padding: 1.5rem 2rem;
     background: rgba(233, 187, 145, 0.98);
     transition: all 0.22s;
+    box-shadow: 1px 2px 10px 0 rgba(0, 0, 0, 0.2);
 }
 
 .btn:hover {
@@ -171,6 +175,33 @@ p {
     align-items: center;
     justify-content: space-around;
     flex-direction: row;
+}
+.card-shadow {
+    background: #FFFFFF;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 6px;
+}
+.carousel {
+    margin: 0 1rem;
+    cursor: grab;
+}
+.carousel__slide > .carousel__item {
+    transform: scale(0.8) translate(-10px);
+    opacity: 0.7;
+    transition: 0.5s;
+}
+.carousel__slide--visible > .carousel__item {
+    opacity: 1;
+    transform: rotateY(0);
+}
+.carousel__slide--next > .carousel__item {
+    transform: scale(0.8) translate(-10px);
+}
+.carousel__slide--prev > .carousel__item {
+    transform: scale(0.8) translate(10px);
+}
+.carousel__slide--active > .carousel__item {
+    transform: scale(1);
 }
 
 @media (max-width: 950px) {
