--- a/src/theme.css
+++ b/src/theme.css
@@ -1,5 +1,3 @@
-
-
 body {
     min-width: 350px;
     box-sizing: border-box;
@@ -15,7 +13,9 @@ body {
     text-indent: 2px;
     background: rgba(255, 236, 225, 0.6);
 }
-
+    body.modal-open {
+        overflow: hidden;
+    }
 .header ,.header.flex-column {
     align-items: center;
     line-height: 50px;
