--- a/src/theme.css
+++ b/src/theme.css
@@ -77,6 +77,7 @@ a {
     border: none;
     max-width: 50rem;
     padding: 1.5rem 2rem;
+    outline: none;
     background: rgba(233, 187, 145, 0.98);
     transition: all 0.22s;
     box-shadow: 1px 2px 10px 0 rgba(0, 0, 0, 0.2);
@@ -175,7 +176,7 @@ p {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
     flex-direction: row;
 }
 .card-shadow {
