--- a/src/theme.css
+++ b/src/theme.css
@@ -161,10 +161,12 @@ p {
     font-weight: lighter;
     font-size: 20px;
     line-height: 24px;
-    text-align: center;
     letter-spacing: 0.03em;
 }
-
+ul {
+    text-align:center;
+    list-style-position: inside;
+}
 .flex-column {
     display: flex;
     flex-direction: column;
