fix header margin

--- a/src/theme.css
+++ b/src/theme.css
@@ -1,236 +1,238 @@
 body {
-    min-width: 350px;
-    box-sizing: border-box;
-    margin: 0;
-    font-family: 'Poiret One', serif, sans-serif;
-    font-size: 24px;
-    text-align: center;
-    font-style: normal;
-    font-weight: normal;
-    line-height: 40px;
-    color: #614021;
-    letter-spacing: 0.08em;
-    text-indent: 2px;
-    background: rgba(255, 236, 225, 0.6);
+	min-width: 350px;
+	box-sizing: border-box;
+	margin: 0;
+	font-family: 'Poiret One', serif, sans-serif;
+	font-size: 24px;
+	text-align: center;
+	font-style: normal;
+	font-weight: normal;
+	line-height: 40px;
+	color: #614021;
+	letter-spacing: 0.08em;
+	text-indent: 2px;
+	background: rgba(255, 236, 225, 0.6);
 }
-    body.modal-open {
-        overflow: hidden;
-    }
-.header ,.header.flex-column {
-    align-items: center;
-    line-height: 50px;
-    padding-top: 2rem;
-    margin-top: 6rem;
+body.modal-open {
+	overflow: hidden;
+}
+.header,
+.header.flex-column {
+	align-items: center;
+	line-height: 50px;
+	padding-top: 2rem;
+	margin-top: 3rem;
 }
 
 a {
-    color: #614021;
-    font-weight: normal;
-    font-style: normal;
-    text-decoration: none;
+	color: #614021;
+	font-weight: normal;
+	font-style: normal;
+	text-decoration: none;
 }
 
 .input {
-    margin: 0.5rem 1rem;
-    font-family: 'Poiret One', serif, sans-serif;
-    font-size: 20px;
-    position: relative;
-    border-radius: 99px;
-    letter-spacing: 0.08em;
-    border: none;
-    padding: 1rem 1.5rem;
-    transition: all 0.05s;
-    box-shadow: 1px 2px 10px 0 rgba(0, 0, 0, 0.2);
+	margin: 0.5rem 1rem;
+	font-family: 'Poiret One', serif, sans-serif;
+	font-size: 20px;
+	position: relative;
+	border-radius: 99px;
+	letter-spacing: 0.08em;
+	border: none;
+	padding: 1rem 1.5rem;
+	transition: all 0.05s;
+	box-shadow: 1px 2px 10px 0 rgba(0, 0, 0, 0.2);
 }
 .input:focus {
-    outline: rgb(233, 187, 145) solid 0.2rem;
+	outline: rgb(233, 187, 145) solid 0.2rem;
 }
 .input.notvalid {
-    outline: rgba(255, 111, 111, 0.71) solid 0.2rem;
+	outline: rgba(255, 111, 111, 0.71) solid 0.2rem;
 }
 .input.valid {
-    outline: rgba(162, 255, 122, 0.64) solid 0.2rem;
+	outline: rgba(162, 255, 122, 0.64) solid 0.2rem;
 }
 
 .textarea {
-    margin: 0.5rem 1rem;
-    font-family: 'Poiret One', serif, sans-serif;
-    font-size: 20px;
-    resize: none;
-    height: 20rem;
-    width: 30rem;
-    border-radius: 15px;
-    letter-spacing: 0.08em;
-    border: none;
-    padding: 1rem 1.5rem;
-    transition: all 0.05s;
-    box-shadow: 1px 2px 10px 0 rgba(0, 0, 0, 0.2);
+	margin: 0.5rem 1rem;
+	font-family: 'Poiret One', serif, sans-serif;
+	font-size: 20px;
+	resize: none;
+	height: 20rem;
+	width: 30rem;
+	border-radius: 15px;
+	letter-spacing: 0.08em;
+	border: none;
+	padding: 1rem 1.5rem;
+	transition: all 0.05s;
+	box-shadow: 1px 2px 10px 0 rgba(0, 0, 0, 0.2);
 }
 
 .textarea:focus {
-    outline: rgb(233, 187, 145) solid 0.2rem;
+	outline: rgb(233, 187, 145) solid 0.2rem;
 }
 
 .btn {
-    margin: 0.5rem 1rem 2rem 1rem;
-    font-family: 'Poiret One', serif, sans-serif;
-    font-weight: normal;
-    font-size: 20px;
-    position: relative;
-    border-radius: 99px;
-    letter-spacing: 0.08em;
-    border: none;
-    max-width: 50rem;
-    padding: 1.5rem 2rem;
-    outline: none;
-    background: rgba(233, 187, 145, 0.98);
-    transition: all 0.22s;
-    box-shadow: 1px 2px 10px 0 rgba(0, 0, 0, 0.2);
+	margin: 0.5rem 1rem 2rem 1rem;
+	font-family: 'Poiret One', serif, sans-serif;
+	font-weight: normal;
+	font-size: 20px;
+	position: relative;
+	border-radius: 99px;
+	letter-spacing: 0.08em;
+	border: none;
+	max-width: 50rem;
+	padding: 1.5rem 2rem;
+	outline: none;
+	background: rgba(233, 187, 145, 0.98);
+	transition: all 0.22s;
+	box-shadow: 1px 2px 10px 0 rgba(0, 0, 0, 0.2);
 }
 
 .btn:hover {
-    cursor: pointer;
-    background: rgba(215, 177, 136, 0.85);
+	cursor: pointer;
+	background: rgba(215, 177, 136, 0.85);
 }
 
 .btn:active {
-    box-shadow: inset 1px 1px 1px rgba(0, 0, 0, 0.3);
+	box-shadow: inset 1px 1px 1px rgba(0, 0, 0, 0.3);
 }
 
 .table {
-    min-width: 15rem;
-    margin: 0 2rem 1rem 2rem;
-    width: 85%;
-    border-collapse: collapse;
+	min-width: 15rem;
+	margin: 0 2rem 1rem 2rem;
+	width: 85%;
+	border-collapse: collapse;
 }
-    .table-title-item {
-        padding: 1rem;
-    }
-    .table-row-1 {
-        background-color: rgba(255,255,255,0.95);
-    }
-    .table-row-2 {
-        background-color: rgba(255,255,255,0.8);
-        border-bottom: 2px solid rgba(128, 128, 128, 0.4);
-        border-top: 2px solid rgba(128, 128, 128, 0.4);
-    }
-    .table-row-item {
-        margin-right: 0;
-        font-size: 20px;
-        padding: 1rem;
-    }
+.table-title-item {
+	padding: 1rem;
+}
+.table-row-1 {
+	background-color: rgba(255, 255, 255, 0.95);
+}
+.table-row-2 {
+	background-color: rgba(255, 255, 255, 0.8);
+	border-bottom: 2px solid rgba(128, 128, 128, 0.4);
+	border-top: 2px solid rgba(128, 128, 128, 0.4);
+}
+.table-row-item {
+	margin-right: 0;
+	font-size: 20px;
+	padding: 1rem;
+}
 
 .information-message {
-    margin: 0 2rem;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    font-size: 20px;
-    line-height: normal;
-    text-align: left;
-    border-radius: 15px;
-    padding: 1rem;
-    box-shadow: 1px 10px 20px 0 rgba(0,0,0,0.1);
-    background-color: rgba(255,255,255,0.85);
+	margin: 0 2rem;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	font-size: 20px;
+	line-height: normal;
+	text-align: left;
+	border-radius: 15px;
+	padding: 1rem;
+	box-shadow: 1px 10px 20px 0 rgba(0, 0, 0, 0.1);
+	background-color: rgba(255, 255, 255, 0.85);
 }
-    .info-logo-img {
-        width: 2.5rem;
-        position: absolute;
-        align-self: flex-end;
-    }
+.info-logo-img {
+	width: 2.5rem;
+	position: absolute;
+	align-self: flex-end;
+}
 
 h2 {
-    max-width: 90%;
-    margin: 0 0 2rem 0;
-    padding: 0 1rem;
-    font-family: 'Poiret One', serif, sans-serif;
-    font-weight: bold;
-    font-size: 45px;
-    line-height: 50px;
-    text-align: center;
-    letter-spacing: 0.08em;
-    color: #70573B;
+	max-width: 90%;
+	margin: 0 0 2rem 0;
+	padding: 0 1rem;
+	font-family: 'Poiret One', serif, sans-serif;
+	font-weight: bold;
+	font-size: 45px;
+	line-height: 50px;
+	text-align: center;
+	letter-spacing: 0.08em;
+	color: #70573b;
 }
 
 h3 {
-    line-height: 35px;
-    max-width: 90%;
-    padding: 0 1rem;
+	line-height: 35px;
+	max-width: 90%;
+	padding: 0 1rem;
 }
 
 p {
-    margin: 1rem 0;
-    font-family: 'Istok Web', cursive;
-    font-style: normal;
-    font-weight: lighter;
-    font-size: 20px;
-    line-height: 24px;
-    letter-spacing: 0.03em;
+	margin: 1rem 0;
+	font-family: 'Istok Web', cursive;
+	font-style: normal;
+	font-weight: lighter;
+	font-size: 20px;
+	line-height: 24px;
+	letter-spacing: 0.03em;
 }
 ul {
-    list-style-position: inside;
+	list-style-position: inside;
 }
 .flex-column {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin: 2rem 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	margin: 2rem 0;
 }
 
 .flex-row {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-evenly;
-    flex-direction: row;
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: space-evenly;
+	flex-direction: row;
 }
 .card-shadow {
-    background: #FFFFFF;
-    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 6px;
+	background: #ffffff;
+	box-shadow: 0 1px 4px rgba(0, 0, 0, 0.25);
+	border-radius: 6px;
 }
 
 @media (max-width: 950px) {
-    h2 {
-        margin: 0 0 1rem 0;
-        font-size: 35px;
-    }
-    h3 {
-        line-height: 2rem;
-    }
-    .form {
-        width: 100%;
-    }
-    .textarea {
-        width: auto;
-    }
-    .input {
-        width: auto;
-    }
-    .table thead {
-        display: none;
-    }
-    .table-row-1, .table-row-2{
-        display: block;
-    }
-    .table-row-item {
-        display: flex;
-        flex-direction: column;
-        border-bottom: 1px dotted #ccc;
-    }
-    .table-row-item:last-child {
-        border-bottom: 0;
-    }
-    .table-row-item:before {
-        content: attr(aria-label);
-        font-size: 17px;
-        text-transform: uppercase;
-        font-weight: bold;
-    }
-    @media (max-width: 650px) {
-        ul {
-            padding: 0 0 0 1.5rem;
-            list-style-position: outside;
-        }
-    }
+	h2 {
+		margin: 0 0 1rem 0;
+		font-size: 35px;
+	}
+	h3 {
+		line-height: 2rem;
+	}
+	.form {
+		width: 100%;
+	}
+	.textarea {
+		width: auto;
+	}
+	.input {
+		width: auto;
+	}
+	.table thead {
+		display: none;
+	}
+	.table-row-1,
+	.table-row-2 {
+		display: block;
+	}
+	.table-row-item {
+		display: flex;
+		flex-direction: column;
+		border-bottom: 1px dotted #ccc;
+	}
+	.table-row-item:last-child {
+		border-bottom: 0;
+	}
+	.table-row-item:before {
+		content: attr(aria-label);
+		font-size: 17px;
+		text-transform: uppercase;
+		font-weight: bold;
+	}
+	@media (max-width: 650px) {
+		ul {
+			padding: 0 0 0 1.5rem;
+			list-style-position: outside;
+		}
+	}
 }
